--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,12 +11,27 @@ div#return-field {
   border: 2px solid #3b3b3b;
   color: rgb(38, 219, 222);
 }
+div#spaceDiv {
+  justify-content: center;
+  align-items: center;
+}
 
 .container {
   background-color: #151515;
-  width: 80%;
-  margin: 1rem;
-  padding: 1rem;
-  /* overflow-wrap: break-word; */
+  /* width: 80%; */
+  /* margin: 1rem;
+  padding: 1rem; */
   border-radius: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.quote {
+  text-align: center;
+  width: 50%;
+}
+
+#apod_pic {
+
 }
