--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,7 @@
 body {
   background-color: #2b2b2b;
   color: rgb(38, 219, 222);
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -11,27 +11,24 @@ div#return-field {
   border: 2px solid #3b3b3b;
   color: rgb(38, 219, 222);
 }
-div#spaceDiv {
+#spaceDiv {
   justify-content: center;
   align-items: center;
+  flex: auto;
 }
 
 .container {
   background-color: #151515;
-  /* width: 80%; */
-  /* margin: 1rem;
-  padding: 1rem; */
   border-radius: 10px;
-  display: block;
+  display: grid;
   margin-left: auto;
   margin-right: auto;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.quote {
+/* .quote {
   text-align: center;
   width: 50%;
-}
-
-#apod_pic {
-
-}
+} */
